# py-hopscotch

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  hopscotchdict.py  pyproject.toml  setup.cfg  setup.py  test_hopscotchdict.py
.github/workflows/: main.yml
hopscotchdict/: __init__.py
py_hopscotch_dict/: __init__.py  hopscotchdict.py
src/py_hopscotch_dict/: hopscotchdict.py  views.py
test/: __init__.py  conftest.py  test_hopscotchdict.py  test_hopscotchdict_py2.py
