################################################################################
#                              py-hopscotch-dict                               #
#    Full-featured `dict` replacement with guaranteed constant-time lookups    #
#                       (C) 2017, 2019-2020 Jeremy Brown                       #
#       Released under version 3.0 of the Non-Profit Open Source License       #
################################################################################

[build-system]
build-backend = "setuptools.build_meta"

requires = [
	"setuptools >= 43.0.0",
	"wheel",
	]
