################################################################################
#                              py-hopscotch-dict                               #
#    Full-featured `dict` replacement with guaranteed constant-time lookups    #
#                               (C) 2019 Mischif                               #
#       Released under version 3.0 of the Non-Profit Open Source License       #
################################################################################

[aliases]
test=pytest

[bdist_wheel]
universal=1

[metadata]
license_files = LICENSE

[tool:pytest]
addopts = -v -s

[coverage:report]
omit = */__init__.py
show_missing = True
